tests/baselines/reference/decoratorOnClassMethod11.errors.txt
tests/cases/conformance/decorators/class/method/decoratorOnClassMethod11.ts(5,10): error TS2331: 'this' cannot be referenced in a module body.


==== tests/cases/conformance/decorators/class/method/decoratorOnClassMethod11.ts (1 errors) ====
    module M {
        class C {
            decorator(target: Object, key: string): void { }
    
            @this.decorator
             ~~~~
!!! error TS2331: 'this' cannot be referenced in a module body.
            method() { }
        }
    }